# motion-studio-linux

./: .gitignore  AGENTS.md  PLAN.md  README.md  TODO.md  pyproject.toml
docs/: ARCHITECTURE.md  COMMAND_COVERAGE.md  CONTRACTS.md  GUI_PARITY_PLAN.md  HIL_CHECKLIST.md  HIL_RUN_2026-02-12.md  HIL_RUN_2026-02-12_HV60_v4.4.3.md  MOTION_STUDIO_UI_RESEARCH.md
fixtures/compatibility/: matrix.v1.json
fixtures/hil/runs/: README.md
schemas/: flash_report_v1.schema.json  test_report_v1.schema.json
scripts/hil/: package_run.py
src/motion_studio_linux/: __init__.py  basicmicro_transport.py  cli.py  config_schema.py  device_manager.py  errors.py  flasher.py  models.py  recipes.py  reporting.py  session.py  telemetry.py  tester.py  transport.py
src/motion_studio_linux/gui/: __init__.py  contracts.py  desktop_app.py  desktop_controller.py  desktop_utils.py  facade.py  mock_cli.py  reducer.py  setup_form.py  state.py  viewmodels.py
tests/: test_basicmicro_transport.py  test_cli.py  test_command_surface.py  test_config_schema.py  test_device_manager.py  test_flasher.py  test_gui_desktop_app_helpers.py  test_gui_desktop_controller.py  test_gui_desktop_utils.py  test_gui_facade.py  test_gui_integration_flow.py  test_gui_mock_cli.py  test_gui_reducer.py  test_gui_scaffold.py  test_gui_setup_form.py  test_models_and_errors.py  test_reporting.py  test_scaffold_integrity.py  test_session.py  test_tester.py
